--- a/client/src/components/Layout/Header/Header.module.css
+++ b/client/src/components/Layout/Header/Header.module.css
@@ -134,7 +134,7 @@ body {
 .mobileMenu {
     display: flex;
     flex-direction: column;
-    padding: 1rem 0;
+    padding: 1rem 10px;
     margin-top: 1rem;
     border-top: 1px solid #e5e7eb;
 }
@@ -295,14 +295,13 @@ body {
 
 @media screen and (max-width: 768px) {
 .logoIcon img {
-    margin-left: 8px;
     width: 35px;
     height: 35px;
 }
 }
 @media screen and (max-width: 480px) {
     .logoIcon img {
-        margin-left: 8px;
+        margin-left: 10px;
     width: 35px;
     height: 35px;
 }
