--- a/client/src/pages/OurTeam/OurTeam.module.css
+++ b/client/src/pages/OurTeam/OurTeam.module.css
@@ -1,3 +1,9 @@
+.ourTeamContainer{
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+    margin-top: 100px;
+}
 .ourTeamContainer h2{
     font-size: 1.5rem;
     font-weight: 600;
@@ -11,17 +17,38 @@
 .linkGithub{
     text-decoration: none;
     color: #333;
-    
 }
 .checkrole{
     margin-top: 8px;
 }
-
-@media (max-width: 768px) {
+.nextToView{
+    margin-top: 30px;
+    font-size: 1.2rem;
+    /* font-weight: 600; */
+    justify-content: center;
+    align-items: end;
+    color: #333;
+    text-decoration: none;
+    display: flex;
+    transition: color 0.3s ease;
+    /* color: pink; */
+    transition: all 0.3s ease;
+    margin-bottom: 100px;
+}
+.nextToView:hover{
+    transform: translateX(5px);
+}
+@media (max-width: 768px) { 
+    .ourTeamContainer{
+    margin-top: 40px;
+}
    .ourTeamContainer h2{
     font-size: 1.3rem;
     font-weight: 600;
     color: #333;
 }
-
+.nextToView{
+    font-size: 1.1rem;
+    margin-bottom: 30px;
+}
 }
